--- a/index.html
+++ b/index.html
@@ -192,17 +192,17 @@
 
         <div class="month-selector">
             <div>Jan</div>
-            <div>Feb</div>
+            <div class="active">Feb</div>
             <div>Mar</div>
-            <div>Apr</div>
+            <div class="active">Apr</div>
             <div>May</div>
-            <div>Jun</div>
+            <div class="active">Jun</div>
             <div>Jul</div>
             <div class="active">Aug</div>
             <div>Sep</div>
-            <div>Oct</div>
+            <div class="active">Oct</div>
             <div>Nov</div>
-            <div>Dec</div>
+            <div class="active">Dec</div>
         </div>
     </div>
 
@@ -235,7 +235,8 @@
         const specialDates2024 = [
             { label: "Reporting/Registration/Academic Induction/Sharing of Academic Vision" },
             { label: "Pre-Mid Semester Session" },
-            { start: "09-17", end: "09-21", label: "Mid-Semester Examination" }, // Example range
+            { start: "09-17", end: "09-21", label: "Mid-Semester Examination" },
+            { start: "10-09", end: "10-09", label: "Dev's Krishna Birthday's" },// Example range
             { label: "Post-Mid Semester Session" },
             { label: "Sessional/Practical/Project/Thesis Exam" },
             { start: "11-22", end: "11-30", label: "End Semester Examination" },
