--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
     </div>
 
-    <a href="mailto:23053498@kiit.ac.in?subject=Feedback%20Regarding%20Kiit%20University%20Student%20Calendar" class="feedback-button">Feedback</a>
+    <a href="mailto:prateekpokhrel000@gmail.com?subject=Feedback%20Regarding%20Kiit%20University%20Student%20Calendar" class="feedback-button">Feedback</a>
 
     <div id="tooltip" class="tooltip"></div>
 
@@ -236,7 +236,7 @@
             { label: "Reporting/Registration/Academic Induction/Sharing of Academic Vision" },
             { label: "Pre-Mid Semester Session" },
             { start: "09-17", end: "09-21", label: "Mid-Semester Examination" },
-            { start: "10-09", end: "10-09", label: "Dev's Krishna Birthday's" },// Example range
+            // Example range
             { label: "Post-Mid Semester Session" },
             { label: "Sessional/Practical/Project/Thesis Exam" },
             { start: "11-22", end: "11-30", label: "End Semester Examination" },
