--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
     </div>
 
-    <a href="https://mail.google.com/mail/u/3/#drafts?compose=CllgCJlKFVpNvnnJrXJPHNJNpQKfKGQQvCkTnBJjvrMsmMHwdWVgcmvcKZTbHKsHxWxMVXWSsVq" class="feedback-button">Feedback</a>
+    <a href="mailto:prateekpokhrel000@gmail.com" class="feedback-button">Feedback</a>
 
     <div id="tooltip" class="tooltip"></div>
 
